Updated rest of demo to CR1.